all issues covered

--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -292,7 +292,7 @@
     font-size: 1.25rem;
     line-height: 1.2;
     letter-spacing: .5px;
-    margin-bottom: var(--spacing-vertical-m)
+    margin-bottom: var(--spacing-vertical-l)
   }
 }
 
@@ -534,8 +534,8 @@
 }
 
 .footer__breadcrumb-and-to-top {
-  margin-top: var(--spacing-vertical-xxl);
-  margin-bottom: var(--spacing-vertical-l)
+  margin-top: calc(var(--spacing-vertical-xl) * 2);
+  margin-bottom: var(--spacing-vertical-xl)
 }
 
 .footer__breadcrumb-and-to-top .grid__column {
@@ -564,7 +564,7 @@
 
 @media (min-width: 90rem) {
   .footer__related-websites .related-websites {
-    padding-top: 1.8125rem
+    padding-top: 2rem;
   }
 }
 
@@ -649,7 +649,7 @@
   .footer__main-footer .accordion__button {
     font-size: .875rem;
     padding: 0;
-    margin-bottom: var(--spacing-vertical-m);
+    margin-bottom: var(--spacing-vertical-l);
     letter-spacing: .44px
   }
 }
@@ -911,8 +911,8 @@
 /* footer tabs */
 @media (min-width: 48rem) {
   .footer-tabs {
-    margin-top: var(--spacing-vertical-m);
-    margin-bottom: var(--spacing-vertical-m)
+    margin-top: var(--spacing-vertical-xl);
+    margin-bottom: var(--spacing-vertical-l)
   }
 }
 
